# ntt-cmd-arg-parser

./: .gitignore  CMakeLists.txt  README.md  ntt-lib.json
PCBuild/Windows/MinGW/Debug/: g.bat  t.bat
PCBuild/Windows/MinGW/Release/: g.bat  t.bat
PCBuild/Windows/VS22/: g.bat
examples/: CMakeLists.txt  example.cpp
src/: parser.cpp  parser.hpp
tests/: parser_test.cpp
vendors/: CMakeLists.txt
